--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,4 +1,5 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout.html.twig' %}
+
 
 {% block title %}Log in!{% endblock %}
 
@@ -18,7 +19,7 @@
     <label for="inputEmail">Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
     <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" required>
+    <input type="password" name="password" id="inputPassword" class="form-control mb-3 " required>
 
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
@@ -35,7 +36,7 @@
         </div>
     #}
 
-    <button class="btn btn-lg btn-primary" type="submit">
+    <button class="btn btn-lg btn-primary " type="submit">
         Sign in
     </button>
 </form>
